Point out that QTreeView's expandAll/expandToDepth don't fetch data

They will only expand what's currently in the model.

As a drive-by, remove superfluous : after the \warning macro.

Fixes: QTBUG-94981
Change-Id: I85d38373fb7edf5a5407622b32870e7bcd5d9aeb
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit f6bca6261156e8f648bf7d41ba1728ef17cd6889)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>