src/widgets/itemviews/qtreeview.cpp
@@ -2687,7 +2687,10 @@ QSize QTreeView::viewportSizeHint() const
   \since 4.2
   Expands all expandable items.
 
-  \warning: if the model contains a large number of items,
+  \note This function will not try to \l{QAbstractItemModel::fetchMore}{fetch more}
+  data.
+
+  \warning If the model contains a large number of items,
   this function will take some time to execute.
 
   \sa collapseAll(), expand(), collapse(), setExpanded()
@@ -2709,7 +2712,10 @@ void QTreeView::expandAll()
   A \a depth of -1 will expand all children, a \a depth of 0 will
   only expand the given \a index.
 
-  \warning: if the model contains a large number of items,
+  \note This function will not try to \l{QAbstractItemModel::fetchMore}{fetch more}
+  data.
+
+  \warning If the model contains a large number of items,
   this function will take some time to execute.
 
   \sa expandAll()
@@ -2773,6 +2779,9 @@ void QTreeView::collapseAll()
 /*!
   \since 4.3
   Expands all expandable items to the given \a depth.
+
+  \note This function will not try to \l{QAbstractItemModel::fetchMore}{fetch more}
+  data.
 
   \sa expandAll(), collapseAll(), expand(), collapse(), setExpanded()
 */
